--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<header class="header">
 				<div  class="container">
-					<img src="image/logo-dark.svg">
+					<img src="logo-dark.svg">
 					<h5>(044) 537-02-22, (044) 503-80-80, 0 (800) 303-344 </h5> 
 					<h5><a href="">Запитання та відповіді</a> 
 					<a href="">Кредит</a>
@@ -45,7 +45,7 @@
 			<p><h4>Новий процесор Intel Core i3-8100 8-го покоління, з кодовою назвою мікроархітектури Coffee Lake-S.</p>
 			<p> Призначений для настільної платформи Intel LGA 1151. Належить до сімейства високопродуктивних процесорів Core i3.</h4></p>
 				
-			<img src="image/1.jpg" alt="Intel Core i3-8100" >
+			<img src="1.jpg" alt="Intel Core i3-8100" >
 			<hr>
 			<p><h3>Сімейство процесора</h3></p>
 			<p><h5>Intel Core i3</h5></p>
@@ -58,7 +58,7 @@
 			<hr>
 			<h2>Огляд</h2>
 			<video width="320" height="240" controls="">
-			<source src="video/1.mp4" type="video/mp4">	
+			<source src="1.mp4" type="video/mp4">	
 			</video>	
 		</main>
 	<footer>
