--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<p><a href="lesson 4 task_2/index.html">lesson 4 task_2</a></p>
 		<p><a href="lesson 4 task_3/index.html">lesson 4 task_3</a></p>
 		<p><a href="lesson 5 task_1/index.html">lesson 5 task_1</a></p>
-		<p><a href="lesson 5 task_2/index.html">lesson 5 task_2</a></p>
+		<p><a href="lesson 5 task_2/cossacs.html">lesson 5 task_2</a></p>
 		<p><a href="lesson 5 task_3/index.html">lesson 5 task_3</a></p>
 		<p><a href="lesson 5 task_4/index.html">lesson 5 task_4</a></p>
 
