--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 		<p><a href="lesson 5 task_3/index.html">lesson 5 task_3</a></p>
 		<p><a href="lesson 5 task_4/index.html">lesson 5 task_4</a></p>
 		<p><a href="lesson 6 task_1/index.html">lesson 6 task_1</a></p>
+		<p><a href="lesson 7 task_1/index.html">lesson 7 task_1</a></p>
+		<p><a href="lesson 7 task_2/index.html">lesson 7 task_2</a></p>
+		<p><a href="lesson 8 task_1/index.html">lesson 8 task_1</a></p>
+		<p><a href="lesson 9 task_1/index.html">lesson 9 task_1</a></p>
+		<p><a href="lesson 10 task_1/index.html">lesson 10 task_1</a></p>
+		<p><a href="lesson 11 task_1/index.html">lesson 11 task_1</a></p>
+		<p><a href="lesson 12 task_1/index.html">lesson 12 task_1</a></p>
+		
+		<p><a href="Final/index.html">Final</a></p>
+		
 
 	</div>
 
