--- a/index4.html
+++ b/index4.html
@@ -26,9 +26,11 @@
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <img src="img/log.svg" alt="logotype">
   <a class="navbar-brand" href="index.html"> Онлайн-навчання </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+	
+    <button class="navbar-toggler scroll_down" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" id="scroll_down">
       <span class="navbar-toggler-icon"></span>
     </button>
+	
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
