--- a/index4.html
+++ b/index4.html
@@ -27,7 +27,7 @@
   <img src="img/log.svg" alt="logotype">
   <a class="navbar-brand" href="index.html"> Онлайн-навчання </a>
 	
-    <button class="navbar-toggler scroll_down" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" id="scroll_down">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
 	
