--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1>Онлайн-навчання</h1>
         </div>
             
-        <a class="btn btn-danger btn-lg">Переглянути</a>
+        <a class="btn btn-danger btn-lg scroll_down" id="scroll_down">Переглянути</a>
     </div>
 
 
