--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1>Онлайн-навчання</h1>
         
           <div class="wrapper">
-  <button type="button" class="scroll_down" id="scroll_down">Переглянути</button>
+  <button type="button" class="  scroll_down btn btn-danger btn-lg" id="scroll_down">Переглянути</button>
 </div>
 
 
