--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
         <div class="hidden-xs">
           <h1>Онлайн-навчання</h1>
         
-          <div class="wrapper">
-  <button type="button" class="  scroll_down btn btn-danger btn-lg" id="scroll_down">Переглянути</button>
+          </div>
+            
+        <a class="btn btn-danger btn-lg">Переглянути</a>
+   
 </div>
 
 
