--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
           </div>
             
-        <a class="btn btn-danger btn-lg">Переглянути</a>
+          <button type="button" class="scroll_down" id="scroll_down> <a class="btn btn-danger btn-lg">Переглянути</a></button>
    
 </div>
 
