--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
   </div>
 </footer>
 </div> 
+<script src="../js/script.js"></script> 
+                                                                                                                  
 </body>
 </html>
 
