--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </div>
 </footer>
 </div> 
-<script src="/js/script.js"></script> 
+<script src="js/script.js"></script> 
                                                                                                                   
 </body>
 </html>
