--- a/index.html
+++ b/index.html
@@ -96,25 +96,7 @@
   </div>
 </footer>
 </div> 
-<script>
-  (function() {
-  'use strict';
-  var btnScrollDown = document.querySelector('#scroll_down');
-  function scrollDown() {
-    var windowCoords = document.documentElement.clientHeight;
-    (function scroll() {
-      if (window.pageYOffset < windowCoords) {
-        window.scrollBy(0, 10);
-        setTimeout(scroll, 0);
-      }
-      if (window.pageYOffset > windowCoords) {
-        window.scrollTo(0, windowCoords);
-      }
-    })();
-  }
-  btnScrollDown.addEventListener('click', scrollDown);
-})();                                                                               
-</script>                                                    
+<script src="js/script.js"></script>                                                    
 </body>
 </html>
 
