--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <h1>Онлайн-навчання</h1>
         
           </div>
-            
+            <div class="wrapper">
           <button type="button" class="scroll_down" id="scroll_down> <a class="btn btn-danger btn-lg">Переглянути</a></button>
-   
+              </div>
 </div>
 
 
