--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1>Онлайн-навчання</h1>
         
           </div>
-            <button type="button" class="scroll_down" id="scroll_down> <a class="btn btn-danger btn-lg">Переглянути</a></button>
+            <button type="button" class="scroll_down" id="scroll_down> Переглянути</button>
               
 </div>
 
