--- a/index4.html
+++ b/index4.html
@@ -109,7 +109,7 @@ $fio = urldecode($fio);
 $email = urldecode($email);
 $fio = trim($fio);
 $email = trim($email);
-if (mail("example@mail.ru", "Заявка с сайта", "ФИО:".$fio.". E-mail: ".$email ,"From: example2@mail.ru \r\n")){ 
+if (mail("tana255@ukr.net", "Заявка с сайта", "ФИО:".$fio.". E-mail: ".$email ,"From: tymiv1@gmail.com\r\n")){ 
 echo "Сообщение успешно отправлено"; 
 } else { 
 echo "При отправке сообщения возникли ошибки";
