--- a/index4.html
+++ b/index4.html
@@ -72,7 +72,7 @@
    
   </div>
 
-  <h3 class="list1_text"> Поділіться інформацією про інші цікаві сайти для онлайн-навчання</h3>
+  <h3 class="list1_text"> Поділіться, будь ласка,  інформацією про інші цікаві сайти для онлайн-навчання</h3>
 
 <form>
   <div class="form-row">
