--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Онлайн-навчання</title>
+  <meta name="description" content="Онлайн-навчання Онлайн-платформи Навчальні-сайти Цікаві ресурси для онлайн-навчання Онлайн-обучение онлайн-платформы Учебные сайты Интересные ресурсы для онлайн-обучения ">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
