--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
   <title>Онлайн-навчання</title>
   <meta name="description" content="Онлайн-навчання Онлайн-платформи Навчальні-сайти Цікаві ресурси для онлайн-навчання Онлайн-обучение онлайн-платформы Учебные сайты Интересные ресурсы для онлайн-обучения ">
